// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inline Input Set Error Exp should render input set menu action button 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main PageHeader--container PageHeader--standard pageHeaderStyles StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge StyledProps--background-white"
    data-testid="page-header"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="PageHeader--breadcrumbsDiv"
      >
        <div
          class="Layout--horizontal StyledProps--main Breadcrumbs--breadcrumbs StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/dummy/cd"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                data-icon="cd-main"
              >
                <svg
                  height="16"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M26.427 7.06A5.073 5.073 0 0129 11.52l-.077 8.934a5.073 5.073 0 01-2.537 4.35l-8.002 4.618a5.073 5.073 0 01-5.035.021l-7.776-4.402A5.073 5.073 0 013 20.583l.077-8.935a5.073 5.073 0 012.537-4.35l8.002-4.619a5.073 5.073 0 015.035-.02l7.776 4.402zm-2.83 6.938c-.42 1.586-2.029 2.538-3.601 2.141l-7.489-2.026a4.696 4.696 0 00-3.62.48 4.773 4.773 0 00-2.222 2.925 4.835 4.835 0 00.479 3.664 4.757 4.757 0 002.905 2.251 4.696 4.696 0 003.62-.48 4.773 4.773 0 002.222-2.924l.26-1.047a.25.25 0 00-.177-.302l-1.258-.34a.25.25 0 00-.307.18l-.256 1.025c-.426 1.602-2.064 2.556-3.651 2.127-1.582-.428-2.523-2.073-2.1-3.67.421-1.586 2.03-2.538 3.602-2.142l7.489 2.027a4.696 4.696 0 003.62-.48 4.773 4.773 0 002.222-2.925 4.835 4.835 0 00-.479-3.664 4.757 4.757 0 00-2.905-2.251 4.696 4.696 0 00-3.62.48 4.773 4.773 0 00-2.222 2.924l-.247.828a.25.25 0 00.174.312l1.259.34a.25.25 0 00.304-.169l.248-.827c.426-1.602 2.064-2.557 3.651-2.127 1.582.428 2.523 2.073 2.1 3.67z"
                    fill="url(#cd-main_svg__a)"
                    fill-rule="evenodd"
                  />
                  <defs>
                    <lineargradient
                      gradientUnits="userSpaceOnUse"
                      id="cd-main_svg__a"
                      x1="6.774"
                      x2="21.5"
                      y1="2"
                      y2="30"
                    >
                      <stop
                        stop-color="#62F91F"
                      />
                      <stop
                        offset="1"
                        stop-color="#45BD35"
                      />
                    </lineargradient>
                  </defs>
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
              >
                dummy
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                height="8"
                viewBox="0 0 8 14"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/dummy/cd/orgs/dummy/projects/dummy/pipelines"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
              >
                pipelines
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                height="8"
                viewBox="0 0 8 14"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/dummy/cd/orgs/dummy/projects/dummy/pipelines/testpip/input-sets?storeType=INLINE"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
              >
                testsdfsdf
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                height="8"
                viewBox="0 0 8 14"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
        style="width: 42%;"
      >
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-bold StyledProps--font-variation-h4"
          style="--text-line-clamp: 1;"
        >
          inputSets.editTitle
        </p>
        <div
          class="optionBtns"
        >
          <div
            class="PillToggle--optionBtns"
          >
            <div
              class="PillToggle--item PillToggle--disabledMode"
              data-name="toggle-option-one"
              role="button"
              tabindex="0"
            >
              VISUAL
              <span
                class="bp3-popover-wrapper bp3-dark"
              >
                <span
                  class="bp3-popover-target"
                >
                  <span
                    class="bp3-icon StyledProps--main PillToggle--disableToggleReasonIcon StyledProps--intent-danger"
                    data-icon="danger-icon"
                    data-testid="invalid-icon"
                    tabindex="0"
                  >
                    <svg
                      fill="none"
                      height="12"
                      viewBox="0 0 32 32"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        clip-rule="evenodd"
                        fill="#da291d"
                        fill-rule="evenodd"
                      >
                        <path
                          d="M16.878 4.506a1 1 0 00-1.737 0L3.153 25.505A1 1 0 004.022 27h23.974a1 1 0 00.869-1.495zm.603 17.973c0-.823-.684-1.49-1.527-1.49s-1.527.667-1.527 1.49c0 .822.684 1.49 1.527 1.49s1.527-.668 1.527-1.49zm-1.527-3.486a1 1 0 001-1v-6.997a1 1 0 00-2 0v6.997a1 1 0 001 1z"
                        />
                        <path
                          d="M4.022 26L16.009 5.002 27.996 26zm11.832-6.01a2 2 0 01-1.9-1.997v-6.997a2 2 0 114 0v6.997a2 2 0 01-1.9 1.998c1.328.052 2.427 1.124 2.427 2.488 0 1.398-1.155 2.49-2.527 2.49s-2.527-1.092-2.527-2.49c0-1.364 1.099-2.436 2.427-2.488zM15.14 4.507a1 1 0 011.737 0l11.987 20.999A1 1 0 0127.996 27H4.022a1 1 0 01-.869-1.495L15.141 4.506zm.813 16.483c.843 0 1.527.667 1.527 1.49 0 .822-.684 1.49-1.527 1.49s-1.527-.668-1.527-1.49c0-.823.684-1.49 1.527-1.49zm1-2.996a1 1 0 01-2 0v-6.997a1 1 0 112 0z"
                        />
                      </g>
                    </svg>
                  </span>
                </span>
              </span>
            </div>
            <div
              class="PillToggle--item PillToggle--selected PillToggle--disabledMode"
              data-name="toggle-option-two"
              role="button"
              tabindex="0"
            >
              YAML
            </div>
          </div>
        </div>
        <span
          class="bp3-popover-wrapper bp3-dark reconcileMenu"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              aria-label="input set menu actions"
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
              type="button"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="Options"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 4 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="2"
                    cy="2"
                    r="1.5"
                  />
                  <circle
                    cx="2"
                    cy="8"
                    r="1.5"
                  />
                  <circle
                    cx="2"
                    cy="14"
                    r="1.5"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main PageBody--pageBody"
    data-name="page-body"
    data-testid="page-body"
  >
    <div
      class="StyledProps--font StyledProps--main inputSetForm"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
      >
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <div
            class="editor"
          >
            <div
              class="Layout--vertical StyledProps--main content StyledProps--padding-xlarge"
            >
              <div>
                <span>
                  Yaml View
                </span>
              </div>
            </div>
            <div
              class="Layout--horizontal StyledProps--main footer StyledProps--padding-xlarge"
            >
              <button
                aria-label="save"
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  save
                </span>
              </button>
                 
              <button
                aria-label="cancel"
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-tertiary"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  cancel
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Old Git Sync Input Set Error Exp should render input set menu action button 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main PageHeader--container PageHeader--standard pageHeaderStyles StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge StyledProps--background-white"
    data-testid="page-header"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="PageHeader--breadcrumbsDiv"
      >
        <div
          class="Layout--horizontal StyledProps--main Breadcrumbs--breadcrumbs StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/dummy/cd"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                data-icon="cd-main"
              >
                <svg
                  height="16"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M26.427 7.06A5.073 5.073 0 0129 11.52l-.077 8.934a5.073 5.073 0 01-2.537 4.35l-8.002 4.618a5.073 5.073 0 01-5.035.021l-7.776-4.402A5.073 5.073 0 013 20.583l.077-8.935a5.073 5.073 0 012.537-4.35l8.002-4.619a5.073 5.073 0 015.035-.02l7.776 4.402zm-2.83 6.938c-.42 1.586-2.029 2.538-3.601 2.141l-7.489-2.026a4.696 4.696 0 00-3.62.48 4.773 4.773 0 00-2.222 2.925 4.835 4.835 0 00.479 3.664 4.757 4.757 0 002.905 2.251 4.696 4.696 0 003.62-.48 4.773 4.773 0 002.222-2.924l.26-1.047a.25.25 0 00-.177-.302l-1.258-.34a.25.25 0 00-.307.18l-.256 1.025c-.426 1.602-2.064 2.556-3.651 2.127-1.582-.428-2.523-2.073-2.1-3.67.421-1.586 2.03-2.538 3.602-2.142l7.489 2.027a4.696 4.696 0 003.62-.48 4.773 4.773 0 002.222-2.925 4.835 4.835 0 00-.479-3.664 4.757 4.757 0 00-2.905-2.251 4.696 4.696 0 00-3.62.48 4.773 4.773 0 00-2.222 2.924l-.247.828a.25.25 0 00.174.312l1.259.34a.25.25 0 00.304-.169l.248-.827c.426-1.602 2.064-2.557 3.651-2.127 1.582.428 2.523 2.073 2.1 3.67z"
                    fill="url(#cd-main_svg__a)"
                    fill-rule="evenodd"
                  />
                  <defs>
                    <lineargradient
                      gradientUnits="userSpaceOnUse"
                      id="cd-main_svg__a"
                      x1="6.774"
                      x2="21.5"
                      y1="2"
                      y2="30"
                    >
                      <stop
                        stop-color="#62F91F"
                      />
                      <stop
                        offset="1"
                        stop-color="#45BD35"
                      />
                    </lineargradient>
                  </defs>
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
              >
                dummy
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                height="8"
                viewBox="0 0 8 14"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/dummy/cd/orgs/dummy/projects/dummy/pipelines"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
              >
                pipelines
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                height="8"
                viewBox="0 0 8 14"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/dummy/cd/orgs/dummy/projects/dummy/pipelines/testpip/input-sets?storeType=INLINE"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
              >
                testsdfsdf
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                height="8"
                viewBox="0 0 8 14"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
        style="width: 42%;"
      >
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-bold StyledProps--font-variation-h4"
          style="--text-line-clamp: 1;"
        >
          inputSets.editTitle
        </p>
        <div
          class="optionBtns"
        >
          <div
            class="PillToggle--optionBtns"
          >
            <div
              class="PillToggle--item PillToggle--disabledMode"
              data-name="toggle-option-one"
              role="button"
              tabindex="0"
            >
              VISUAL
              <span
                class="bp3-popover-wrapper bp3-dark"
              >
                <span
                  class="bp3-popover-target"
                >
                  <span
                    class="bp3-icon StyledProps--main PillToggle--disableToggleReasonIcon StyledProps--intent-danger"
                    data-icon="danger-icon"
                    data-testid="invalid-icon"
                    tabindex="0"
                  >
                    <svg
                      fill="none"
                      height="12"
                      viewBox="0 0 32 32"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        clip-rule="evenodd"
                        fill="#da291d"
                        fill-rule="evenodd"
                      >
                        <path
                          d="M16.878 4.506a1 1 0 00-1.737 0L3.153 25.505A1 1 0 004.022 27h23.974a1 1 0 00.869-1.495zm.603 17.973c0-.823-.684-1.49-1.527-1.49s-1.527.667-1.527 1.49c0 .822.684 1.49 1.527 1.49s1.527-.668 1.527-1.49zm-1.527-3.486a1 1 0 001-1v-6.997a1 1 0 00-2 0v6.997a1 1 0 001 1z"
                        />
                        <path
                          d="M4.022 26L16.009 5.002 27.996 26zm11.832-6.01a2 2 0 01-1.9-1.997v-6.997a2 2 0 114 0v6.997a2 2 0 01-1.9 1.998c1.328.052 2.427 1.124 2.427 2.488 0 1.398-1.155 2.49-2.527 2.49s-2.527-1.092-2.527-2.49c0-1.364 1.099-2.436 2.427-2.488zM15.14 4.507a1 1 0 011.737 0l11.987 20.999A1 1 0 0127.996 27H4.022a1 1 0 01-.869-1.495L15.141 4.506zm.813 16.483c.843 0 1.527.667 1.527 1.49 0 .822-.684 1.49-1.527 1.49s-1.527-.668-1.527-1.49c0-.823.684-1.49 1.527-1.49zm1-2.996a1 1 0 01-2 0v-6.997a1 1 0 112 0z"
                        />
                      </g>
                    </svg>
                  </span>
                </span>
              </span>
            </div>
            <div
              class="PillToggle--item PillToggle--selected PillToggle--disabledMode"
              data-name="toggle-option-two"
              role="button"
              tabindex="0"
            >
              YAML
            </div>
          </div>
        </div>
        <span
          class="bp3-popover-wrapper bp3-dark reconcileMenu"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              aria-label="input set menu actions"
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
              type="button"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="Options"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 4 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="2"
                    cy="2"
                    r="1.5"
                  />
                  <circle
                    cx="2"
                    cy="8"
                    r="1.5"
                  />
                  <circle
                    cx="2"
                    cy="14"
                    r="1.5"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main PageBody--pageBody"
    data-name="page-body"
    data-testid="page-body"
  >
    <div
      class="StyledProps--font StyledProps--main PageSpinner--spinner StyledProps--flex StyledProps--flex-align-center-center"
      data-testid="page-spinner"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main PageSpinner--content"
        style="align-items: center; width: 500px;"
      >
        <span
          class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey600"
          data-icon="steps-spinner"
        >
          <svg
            height="32"
            viewBox="0 0 128 128"
            width="32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M122.5 69.25H96.47a33.1 33.1 0 000-10.5h26.05a5.25 5.25 0 010 10.5z"
                fill="#ff8e02"
              />
              <path
                d="M112.04 97.83L89.47 84.8a33.1 33.1 0 005.25-9.1l22.57 13.03a5.25 5.25 0 01-5.28 9.1zM88.68 117.35L75.65 94.78a33.1 33.1 0 009.1-5.25l13.02 22.57a5.25 5.25 0 11-9.1 5.25zM58.7 122.57V96.5a33.1 33.1 0 0010.5 0v26.07a5.25 5.25 0 01-10.5 0zM30.1 112.1l13.04-22.57a33.1 33.1 0 009.1 5.25L39.2 117.35a5.25 5.25 0 11-9.1-5.25zM10.6 88.74L33.16 75.7a33.1 33.1 0 005.25 9.1L15.88 97.83a5.25 5.25 0 11-5.25-9.1z"
                fill="#ffddb3"
                fill-opacity="0.3"
              />
              <path
                d="M5.37 58.75h26.06a33.1 33.1 0 000 10.5H5.37a5.25 5.25 0 010-10.5z"
                fill="#ffd29a"
                fill-opacity="0.4"
              />
              <path
                d="M15.85 30.17L38.4 43.2a33.1 33.1 0 00-5.24 9.1L10.6 39.25a5.25 5.25 0 115.25-9.1z"
                fill="#ffc680"
                fill-opacity="0.5"
              />
              <path
                d="M39.2 10.65l13.03 22.57a33.1 33.1 0 00-9.1 5.25l-13-22.57a5.25 5.25 0 119.1-5.25z"
                fill="#ffbb67"
                fill-opacity="0.6"
              />
              <path
                d="M69.2 5.43V31.5a33.1 33.1 0 00-10.5 0V5.42a5.25 5.25 0 1110.5 0z"
                fill="#ffb04d"
                fill-opacity="0.7"
              />
              <path
                d="M97.77 15.9L84.75 38.47a33.1 33.1 0 00-9.1-5.25l13.03-22.57a5.25 5.25 0 119.1 5.25z"
                fill="#ffa535"
                fill-opacity="0.8"
              />
              <path
                d="M117.3 39.26L94.7 52.3a33.1 33.1 0 00-5.25-9.1l22.57-13.03a5.25 5.25 0 015.25 9.1z"
                fill="#ff991b"
                fill-opacity="0.9"
              />
              <animatetransform
                attributeName="transform"
                calcMode="discrete"
                dur="1200ms"
                repeatCount="indefinite"
                type="rotate"
                values="0 64 64;30 64 64;60 64 64;90 64 64;120 64 64;150 64 64;180 64 64;210 64 64;240 64 64;270 64 64;300 64 64;330 64 64"
              />
            </g>
          </svg>
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-align-center StyledProps--color StyledProps--color-grey600"
        >
          Loading, please wait...
        </p>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main inputSetForm"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
      >
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <div
            class="editor"
          >
            <div
              class="Layout--vertical StyledProps--main content StyledProps--padding-xlarge"
            >
              <div>
                <span>
                  Yaml View
                </span>
              </div>
            </div>
            <div
              class="Layout--horizontal StyledProps--main footer StyledProps--padding-xlarge"
            >
              <button
                aria-label="save"
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  save
                </span>
              </button>
                 
              <button
                aria-label="cancel"
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-tertiary"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  cancel
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Remote Git Sync Input Set Error Exp should render input set menu action button 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main PageHeader--container PageHeader--standard pageHeaderStyles StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge StyledProps--background-white"
    data-testid="page-header"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="PageHeader--breadcrumbsDiv"
      >
        <div
          class="Layout--horizontal StyledProps--main Breadcrumbs--breadcrumbs StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/dummy/cd"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                data-icon="cd-main"
              >
                <svg
                  height="16"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M26.427 7.06A5.073 5.073 0 0129 11.52l-.077 8.934a5.073 5.073 0 01-2.537 4.35l-8.002 4.618a5.073 5.073 0 01-5.035.021l-7.776-4.402A5.073 5.073 0 013 20.583l.077-8.935a5.073 5.073 0 012.537-4.35l8.002-4.619a5.073 5.073 0 015.035-.02l7.776 4.402zm-2.83 6.938c-.42 1.586-2.029 2.538-3.601 2.141l-7.489-2.026a4.696 4.696 0 00-3.62.48 4.773 4.773 0 00-2.222 2.925 4.835 4.835 0 00.479 3.664 4.757 4.757 0 002.905 2.251 4.696 4.696 0 003.62-.48 4.773 4.773 0 002.222-2.924l.26-1.047a.25.25 0 00-.177-.302l-1.258-.34a.25.25 0 00-.307.18l-.256 1.025c-.426 1.602-2.064 2.556-3.651 2.127-1.582-.428-2.523-2.073-2.1-3.67.421-1.586 2.03-2.538 3.602-2.142l7.489 2.027a4.696 4.696 0 003.62-.48 4.773 4.773 0 002.222-2.925 4.835 4.835 0 00-.479-3.664 4.757 4.757 0 00-2.905-2.251 4.696 4.696 0 00-3.62.48 4.773 4.773 0 00-2.222 2.924l-.247.828a.25.25 0 00.174.312l1.259.34a.25.25 0 00.304-.169l.248-.827c.426-1.602 2.064-2.557 3.651-2.127 1.582.428 2.523 2.073 2.1 3.67z"
                    fill="url(#cd-main_svg__a)"
                    fill-rule="evenodd"
                  />
                  <defs>
                    <lineargradient
                      gradientUnits="userSpaceOnUse"
                      id="cd-main_svg__a"
                      x1="6.774"
                      x2="21.5"
                      y1="2"
                      y2="30"
                    >
                      <stop
                        stop-color="#62F91F"
                      />
                      <stop
                        offset="1"
                        stop-color="#45BD35"
                      />
                    </lineargradient>
                  </defs>
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
              >
                dummy
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                height="8"
                viewBox="0 0 8 14"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/dummy/cd/orgs/dummy/projects/dummy/pipelines"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
              >
                pipelines
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                height="8"
                viewBox="0 0 8 14"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/dummy/cd/orgs/dummy/projects/dummy/pipelines/testpip/input-sets?storeType=INLINE"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
              >
                testsdfsdf
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                height="8"
                viewBox="0 0 8 14"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
        style="width: 42%;"
      >
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-bold StyledProps--font-variation-h4"
          style="--text-line-clamp: 1;"
        >
          inputSets.editTitle
        </p>
        <div
          class="optionBtns"
        >
          <div
            class="PillToggle--optionBtns"
          >
            <div
              class="PillToggle--item PillToggle--disabledMode"
              data-name="toggle-option-one"
              role="button"
              tabindex="0"
            >
              VISUAL
              <span
                class="bp3-popover-wrapper bp3-dark"
              >
                <span
                  class="bp3-popover-target"
                >
                  <span
                    class="bp3-icon StyledProps--main PillToggle--disableToggleReasonIcon StyledProps--intent-danger"
                    data-icon="danger-icon"
                    data-testid="invalid-icon"
                    tabindex="0"
                  >
                    <svg
                      fill="none"
                      height="12"
                      viewBox="0 0 32 32"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        clip-rule="evenodd"
                        fill="#da291d"
                        fill-rule="evenodd"
                      >
                        <path
                          d="M16.878 4.506a1 1 0 00-1.737 0L3.153 25.505A1 1 0 004.022 27h23.974a1 1 0 00.869-1.495zm.603 17.973c0-.823-.684-1.49-1.527-1.49s-1.527.667-1.527 1.49c0 .822.684 1.49 1.527 1.49s1.527-.668 1.527-1.49zm-1.527-3.486a1 1 0 001-1v-6.997a1 1 0 00-2 0v6.997a1 1 0 001 1z"
                        />
                        <path
                          d="M4.022 26L16.009 5.002 27.996 26zm11.832-6.01a2 2 0 01-1.9-1.997v-6.997a2 2 0 114 0v6.997a2 2 0 01-1.9 1.998c1.328.052 2.427 1.124 2.427 2.488 0 1.398-1.155 2.49-2.527 2.49s-2.527-1.092-2.527-2.49c0-1.364 1.099-2.436 2.427-2.488zM15.14 4.507a1 1 0 011.737 0l11.987 20.999A1 1 0 0127.996 27H4.022a1 1 0 01-.869-1.495L15.141 4.506zm.813 16.483c.843 0 1.527.667 1.527 1.49 0 .822-.684 1.49-1.527 1.49s-1.527-.668-1.527-1.49c0-.823.684-1.49 1.527-1.49zm1-2.996a1 1 0 01-2 0v-6.997a1 1 0 112 0z"
                        />
                      </g>
                    </svg>
                  </span>
                </span>
              </span>
            </div>
            <div
              class="PillToggle--item PillToggle--selected PillToggle--disabledMode"
              data-name="toggle-option-two"
              role="button"
              tabindex="0"
            >
              YAML
            </div>
          </div>
        </div>
        <span
          class="bp3-popover-wrapper bp3-dark reconcileMenu"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              aria-label="input set menu actions"
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
              type="button"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="Options"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 4 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="2"
                    cy="2"
                    r="1.5"
                  />
                  <circle
                    cx="2"
                    cy="8"
                    r="1.5"
                  />
                  <circle
                    cx="2"
                    cy="14"
                    r="1.5"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main PageBody--pageBody"
    data-name="page-body"
    data-testid="page-body"
  >
    <div
      class="StyledProps--font StyledProps--main inputSetForm"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
      >
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <div
            class="editor"
          >
            <div
              class="Layout--vertical StyledProps--main content StyledProps--padding-xlarge"
            >
              <div>
                <span>
                  Yaml View
                </span>
              </div>
            </div>
            <div
              class="Layout--horizontal StyledProps--main footer StyledProps--padding-xlarge"
            >
              <button
                aria-label="save"
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  save
                </span>
              </button>
                 
              <button
                aria-label="cancel"
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-tertiary"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  cancel
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
